chore: remove use of deprecated Throwables.propagate
Managed to get build warnings down to 478.